# cmake_demo_with_nanolib_subcmake

./: CMakeLists.txt  build.sh  demo
APP/src/: main.c
STM32F4xx_HAL_Driver/: CMakeLists.txt
